# football-agent-adk-copilotkit

./: .dockerignore  .envrc  .gcloudignore  .gitignore  CLAUDE.md  DEMO_KIT.md  Dockerfile  GEMINI.md  README.md  agent_config.yaml  article.md  cleanup_old_engines.sh  deploy-services-to-cloud-run.yaml  deploy_agent_engine.sh  deploy_api.sh  docker-bake-agentic-apps.hcl  docker-compose.yaml  generate_slides.py  panic.sh  pyproject.toml  reset_and_start.sh  slides_content.py
agent_engine_proxy/: Dockerfile  Dockerfile.dockerignore  deploy.sh  main.py  pyproject.toml
diagrams/: adk_gcp_football_stats_agent.excalidraw  adk_gcp_football_stats_agent_cicd.excalidraw  agent_dag.dot  copilot_kit_chart_pipeline.excalidraw
football_stats_agent/: .env  Dockerfile  Dockerfile.dockerignore  agent.py  pyproject.toml
football_stats_agent/prompts/: business_rules.md  query_workflow.md  role.md  schema.md  visualization.md
golden_dataset/: README.md  dataset.yaml  response.py  runner.py
raw_data/: create_and_load_team_stats_raw_table.sh  raw_data_france.json
talks/: CFP-EN.md  CFP-FR.md  DEMO_KIT.md  best-practices-nl-agents.md  generate_slides.py
tests/: conftest.py  test_golden.py
webapp/: Dockerfile  package-lock.json  package.json
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/app/api/copilotkit/: route.ts
webapp/components/: CopilotMarkdown.tsx  DynamicChart.tsx  Header.tsx
