# Virtual workspace root: no [project] section, just orchestrates the
# Python members below and holds repo-wide dev tooling. Each member
# has its own pyproject.toml with its runtime dependencies.

[tool.uv.workspace]
members = ["football_stats_agent", "agent_engine_proxy"]

[dependency-groups]
dev = [
    "python-pptx>=1.0.2",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "pytest-rerunfailures>=14.0",
]
