[project]
name = "football-stats-agent"
version = "0.1.0"
description = "ADK agent answering natural-language questions about the Qatar 2022 World Cup, backed by BigQuery via the managed MCP server."
requires-python = ">=3.11"
dependencies = [
    "google-adk[agent-identity, mcp, a2a, otel-gcp]>=2.1.0",
    "google-cloud-aiplatform>=1.154.0",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
]

# Not built as a wheel: ADK discovers the agent by importing the
# football_stats_agent/ directory directly from disk at runtime, so there
# is no need to install it into site-packages.
[tool.uv]
package = false
